src/metrics/snapshots/big_code_analysis__metrics__abc__tests__cpp_complex_function_abc.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 7,
  "branches": 2,
  "conditions": 9,
  "magnitude": 11.575836902790225,
  "assignments_average": 3.5,
  "branches_average": 1.0,
  "conditions_average": 4.5,
  "assignments_min": 0,
  "assignments_max": 7,
  "branches_min": 0,
  "branches_max": 2,
  "conditions_min": 0,
  "conditions_max": 9
}
