src/metrics/snapshots/big_code_analysis__metrics__abc__tests__csharp_assignments_with_conditions.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 8,
  "branches": 0,
  "conditions": 0,
  "magnitude": 8.0,
  "assignments_average": 2.6666666666666665,
  "branches_average": 0.0,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 8,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 0
}
